Added X-Forwarded-For OPSEC note

--- a/ShodanAPIGW.yaml
+++ b/ShodanAPIGW.yaml
@@ -25,6 +25,7 @@ paths:
           default:
             statusCode: "200"
         requestParameters:
+          integration.request.header.X-Forwarded-For: "'4.4.4.4'"
           integration.request.path.shodan: "method.request.path.shodan"
         passthroughBehavior: "when_no_match"
         cacheNamespace: "u10m8s"
